<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_page_title"
        style="@style/text.title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_16"
        android:text="@string/add_quest_title_add_quest"
        app:layout_constraintBottom_toTopOf="@id/tv_label_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <android.support.constraint.Guideline
        android:id="@+id/gl_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <android.support.constraint.Guideline
        android:id="@+id/gl_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/tv_label_name"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/add_quest_name"
        app:layout_constraintBottom_toTopOf="@id/et_name"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/tv_page_title" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_quest_name"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@id/tv_label_description"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/tv_label_name" />


    <TextView
        android:id="@+id/tv_label_description"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/add_quest_label_description"
        app:layout_constraintBottom_toTopOf="@id/et_description"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/et_name" />

    <EditText
        android:id="@+id/et_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_quest_label_description"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@id/tv_label_type"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/tv_label_description" />

    <TextView
        android:id="@+id/tv_label_type"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/add_quest_label_quest_type"
        app:layout_constraintBottom_toTopOf="@id/s_type"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/et_description" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/s_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_16"
        android:entries="@array/quest_types"
        app:layout_constraintBottom_toTopOf="@id/btn_save_quest"
        app:layout_constraintEnd_toStartOf="@id/et_count"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/tv_label_type" />

    <EditText
        android:id="@+id/et_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_quest_hint_count"
        android:inputType="number"
        android:maxLines="1"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/s_type"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/s_type"
        app:layout_constraintTop_toTopOf="@id/s_type" />

    <Button
        android:id="@+id/btn_save_quest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/common_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/s_type" />

</android.support.constraint.ConstraintLayout>